Equicord Voice User Buttons Plugin Fix
Fixed icons being cut off due to improper sizing.

--- a/minicord-theme.css
+++ b/minicord-theme.css
@@ -2,7 +2,7 @@
  * @name Minicord
  * @description Shrinks and/or minimizes discord elements.
  * @author BranFlakes
- * @version 8.14.2
+ * @version 8.14.3
  * @invite
  * @website
  * @source https://github.com/NewBranFlakes/minicord
@@ -3854,6 +3854,8 @@ div[style='height: 8px;'] {
 .voice-user-button-container .button__201d5,
 .voice-user-button-container .contents__201d5,
 .voice-user-button-container .contents__201d5 svg {
+    min-height: 0px !important;
+    min-width: 0px !important;
     padding: 0px !important;
     height: 16px !important;
     width: 16px !important;
